@@ -1,2 +1,3 @@
 usr/lib/ants
 usr/bin
+usr/share/modules/modulefiles/ants
